--- a/web/public/main.flat.css
+++ b/web/public/main.flat.css
@@ -1800,7 +1800,7 @@ body {
   line-height: 1.4;
   margin: 0;
   background: #34495E;
-  color: #e0e0e0;
+  color: #E6E7E8;
 }
 pre {
   font-family: monospace;
@@ -1831,7 +1831,7 @@ h3,
   font-weight: bold;
 }
 .ansi-black-fg {
-  color: #95A5A6;
+  color: #85929D;
 }
 .ansi-red-fg {
   color: #E74C3C;
@@ -1855,7 +1855,7 @@ h3,
   color: #ECF0F1;
 }
 .ansi-bright-black-fg {
-  color: #95A5A6;
+  color: #85929D;
   font-weight: bold;
 }
 .ansi-bright-red-fg {
@@ -1887,7 +1887,7 @@ h3,
   font-weight: bold;
 }
 .ansi-black-bg {
-  background-color: #95A5A6;
+  background-color: #85929D;
 }
 .ansi-red-bg {
   background-color: #E74C3C;
@@ -1911,7 +1911,7 @@ h3,
   background-color: #ECF0F1;
 }
 .ansi-bright-black-bg {
-  background-color: #95A5A6;
+  background-color: #85929D;
   font-weight: bold;
 }
 .ansi-bright-red-bg {
@@ -1964,7 +1964,7 @@ svg .node.paused rect {
   fill: #3498DB;
 }
 svg .node.job.no-builds rect {
-  fill: #95A5A6;
+  fill: #85929D;
 }
 svg .node.input.failing rect {
   fill: #E67E22;
@@ -1973,7 +1973,7 @@ svg .node.resource a {
   color: #f5f5f5;
 }
 svg .edge {
-  stroke: #95A5A6;
+  stroke: #85929D;
 }
 svg .edge.pending {
   stroke: #BDC3C7;
@@ -2068,7 +2068,7 @@ nav .groups li a {
   background: #2C3E50;
 }
 .steps .nest.odd {
-  background: #7F8C8D;
+  background: #5E6D7D;
 }
 .groups li.main a {
   background: #2C3E50;
@@ -2077,10 +2077,10 @@ nav .groups li a {
   background: #3498DB;
 }
 .build-step.first-occurrence .header {
-  background: #95A5A6;
+  background: #85929D;
 }
 .groups li.active a {
-  background: #95A5A6;
+  background: #85929D;
 }
 .legend dt.pending {
   background: #BDC3C7;
@@ -2107,7 +2107,7 @@ nav .groups li a {
   color: #ECF0F1;
 }
 .build-action i:hover {
-  background: #7F8C8D;
+  background: #5E6D7D;
 }
 .build-action i:active {
   background: #BDC3C7;
@@ -2142,7 +2142,7 @@ nav .groups li a {
   background: #E67E22;
 }
 .no-builds {
-  background: #95A5A6;
+  background: #85929D;
 }
 .pending {
   background: #BDC3C7;
@@ -2198,8 +2198,7 @@ span.error {
 .job-animation-node .animation,
 .job-animation-node .animation,
 .legend dt.started,
-.legend dt.pending,
-.legend dt.failed {
+.legend dt.pending {
   border-radius: 1px;
 }
 .legend dt.started {
@@ -2254,9 +2253,6 @@ span.error {
     box-shadow: 0 0 0 2px #34495E, 0 0 0 4px #BDC3C7, 0 0 0 6px #34495E, 0 0 0 8px transparent;
   }
 }
-.legend dt.failed {
-  box-shadow: 0 0 0 2px #34495E, 0 0 0 5px rgba(231, 76, 60, 0.7);
-}
 .job-animation-node.pending .animation-xlarge {
   -webkit-animation: "xlarge-pending-ripples-flat" 1s linear infinite;
   animation: "xlarge-pending-ripples-flat" 1s linear infinite;
@@ -2308,9 +2304,6 @@ span.error {
   100% {
     box-shadow: 0 0 0 20px #34495E, 0 0 0 40px #F1C40F, 0 0 0 60px #34495E, 0 0 0 80px transparent;
   }
-}
-.job-animation-node.failed .animation-xlarge {
-  box-shadow: 0 0 0 24px #34495E, 0 0 0 60px rgba(231, 76, 60, 0.7);
 }
 .job-animation-node.pending .animation-large {
   -webkit-animation: "large-pending-ripples-flat" 1s linear infinite;
@@ -2364,9 +2357,6 @@ span.error {
     box-shadow: 0 0 0 15px #34495E, 0 0 0 30px #F1C40F, 0 0 0 45px #34495E, 0 0 0 60px transparent;
   }
 }
-.job-animation-node.failed .animation-large {
-  box-shadow: 0 0 0 18px #34495E, 0 0 0 45px rgba(231, 76, 60, 0.7);
-}
 .job-animation-node.pending .animation-medium {
   -webkit-animation: "medium-pending-ripples-flat" 1s linear infinite;
   animation: "medium-pending-ripples-flat" 1s linear infinite;
@@ -2418,9 +2408,6 @@ span.error {
   100% {
     box-shadow: 0 0 0 7px #34495E, 0 0 0 14px #F1C40F, 0 0 0 21px #34495E, 0 0 0 28px transparent;
   }
-}
-.job-animation-node.failed .animation-medium {
-  box-shadow: 0 0 0 8px #34495E, 0 0 0 20px rgba(231, 76, 60, 0.7);
 }
 .job-animation-node.pending .animation-small {
   -webkit-animation: "small-pending-ripples-flat" 1s linear infinite;
@@ -2474,9 +2461,6 @@ span.error {
     box-shadow: 0 0 0 3px #34495E, 0 0 0 6px #F1C40F, 0 0 0 9px #34495E, 0 0 0 12px transparent;
   }
 }
-.job-animation-node.failed .animation-small {
-  box-shadow: 0 0 0 4px #34495E, 0 0 0 10px rgba(231, 76, 60, 0.7);
-}
 .build-number {
   font-size: 2em;
   color: #ECF0F1;
@@ -2487,7 +2471,7 @@ span.error {
   font-weight: bold;
 }
 .build-one-off {
-  background-color: #95A5A6;
+  background-color: #85929D;
 }
 .build-action.btn-pause i {
   font-size: 23px;
@@ -2540,7 +2524,7 @@ span.error {
 }
 .btn-pause.disabled,
 .btn-pause.enabled:active {
-  background-color: #95A5A6;
+  background-color: #85929D;
 }
 .btn-large {
   font-size: 25px;
@@ -2563,7 +2547,7 @@ span.error {
 .list-collapsable-content {
   display: none;
   box-sizing: border-box;
-  background-color: #7F8C8D;
+  background-color: #5E6D7D;
 }
 .expanded .list-collapsable-content {
   display: block;
@@ -2609,11 +2593,11 @@ span.error {
 }
 .aggregate {
   padding: 1em;
-  background: #7F8C8D;
+  background: #5E6D7D;
 }
 .aggregate > .seq {
   margin-bottom: .5em;
-  border-top: 1px solid #95A5A6;
+  border-top: 1px solid #85929D;
   padding-top: .5em;
 }
 .aggregate > .seq:first-child {
@@ -2621,22 +2605,22 @@ span.error {
   padding-top: 0;
 }
 .aggregate .aggregate {
-  background: #95A5A6;
+  background: #85929D;
 }
 .aggregate .aggregate > .seq {
-  border-color: #7F8C8D;
+  border-color: #5E6D7D;
 }
 .aggregate .aggregate .aggregate {
-  background: #7F8C8D;
+  background: #5E6D7D;
 }
 .aggregate .aggregate .aggregate > .seq {
-  border-color: #95A5A6;
+  border-color: #85929D;
 }
 .aggregate .aggregate .aggregate .aggregate {
-  background: #95A5A6;
+  background: #85929D;
 }
 .aggregate .aggregate .aggregate .aggregate > .seq {
-  border-color: #7F8C8D;
+  border-color: #5E6D7D;
 }
 .aggregate .aggregate .aggregate .aggregate .aggregate {
   background: #f0f;
@@ -2784,7 +2768,7 @@ span.error {
   background: none;
 }
 .jobs-builds-list li {
-  background-color: #7F8C8D;
+  background-color: #5E6D7D;
   width: 100%;
   float: none;
   margin: 0px;
@@ -2839,7 +2823,7 @@ span.error {
 .step-body {
   padding: 10px;
 }
-.build-step pre {
+.step-body pre {
   margin: 0;
 }
 .steps {
@@ -2857,7 +2841,7 @@ span.error {
 .build-step.inactive h3,
 .build-step.inactive i,
 .build-step.inactive .dictionary {
-  color: #95A5A6;
+  color: #85929D;
 }
 .build-step.inactive.first-occurrence h3,
 .build-step.inactive.first-occurrence i,
@@ -3009,13 +2993,13 @@ svg .active.node text {
 }
 .table td {
   padding: 5px;
-  border-top: 1px solid #7F8C8D;
+  border-top: 1px solid #5E6D7D;
 }
 .table td:first-child {
   padding-left: 0px;
 }
 .table td:last-child {
-  border-right: 1px solid #7F8C8D;
+  border-right: 1px solid #5E6D7D;
 }
 .table thead {
   text-align: left;
@@ -3330,7 +3314,7 @@ ul {
   margin: 0;
   text-align: right;
   background: #2C3E50;
-  border-bottom: 1px solid #7F8C8D;
+  border-bottom: 1px solid #5E6D7D;
   line-height: 28px;
 }
 .pipelinesNav-enabled .pipelines li:hover {
@@ -3382,7 +3366,7 @@ ul {
   color: #f5f5f5;
 }
 .login-box .options li a:hover {
-  background: #7F8C8D;
+  background: #5E6D7D;
 }
 .pagination-header,
 .pagination-footer {
@@ -3406,11 +3390,11 @@ ul {
   width: 40px;
 }
 .btn-page-link a:hover {
-  background: #95A5A6;
+  background: #85929D;
   border-radius: 50%;
 }
 .btn-page-link.disabled .arrow {
-  color: #95A5A6;
+  color: #85929D;
 }
 .resource-check-status {
   margin-bottom: 24px;
@@ -3439,7 +3423,7 @@ ul {
   margin: 0;
   font-size: 16px;
   line-height: 26px;
-  background: #7F8C8D;
+  background: #5E6D7D;
 }
 .retry-tabs li {
   display: inline-block;
@@ -3452,10 +3436,10 @@ ul {
   display: inline-block;
 }
 .retry-tabs li:hover {
-  background: #95A5A6;
+  background: #85929D;
 }
 .retry-tabs li.current {
-  background: #95A5A6;
+  background: #85929D;
   opacity: 1;
 }
 .retry-tabs li.inactive {
