--- a/web/public/main.pop.css
+++ b/web/public/main.pop.css
@@ -2198,8 +2198,7 @@ span.error {
 .job-animation-node .animation,
 .job-animation-node .animation,
 .legend dt.started,
-.legend dt.pending,
-.legend dt.failed {
+.legend dt.pending {
   border-radius: 1px;
 }
 .legend dt.started {
@@ -2254,9 +2253,6 @@ span.error {
     box-shadow: 0 0 0 2px #202020, 0 0 0 4px #b0b0b0, 0 0 0 6px #202020, 0 0 0 8px transparent;
   }
 }
-.legend dt.failed {
-  box-shadow: 0 0 0 2px #202020, 0 0 0 5px rgba(235, 0, 138, 0.7);
-}
 .job-animation-node.pending .animation-xlarge {
   -webkit-animation: "xlarge-pending-ripples-pop" 1s linear infinite;
   animation: "xlarge-pending-ripples-pop" 1s linear infinite;
@@ -2308,9 +2304,6 @@ span.error {
   100% {
     box-shadow: 0 0 0 20px #202020, 0 0 0 40px #f8ca12, 0 0 0 60px #202020, 0 0 0 80px transparent;
   }
-}
-.job-animation-node.failed .animation-xlarge {
-  box-shadow: 0 0 0 24px #202020, 0 0 0 60px rgba(235, 0, 138, 0.7);
 }
 .job-animation-node.pending .animation-large {
   -webkit-animation: "large-pending-ripples-pop" 1s linear infinite;
@@ -2364,9 +2357,6 @@ span.error {
     box-shadow: 0 0 0 15px #202020, 0 0 0 30px #f8ca12, 0 0 0 45px #202020, 0 0 0 60px transparent;
   }
 }
-.job-animation-node.failed .animation-large {
-  box-shadow: 0 0 0 18px #202020, 0 0 0 45px rgba(235, 0, 138, 0.7);
-}
 .job-animation-node.pending .animation-medium {
   -webkit-animation: "medium-pending-ripples-pop" 1s linear infinite;
   animation: "medium-pending-ripples-pop" 1s linear infinite;
@@ -2419,9 +2409,6 @@ span.error {
     box-shadow: 0 0 0 7px #202020, 0 0 0 14px #f8ca12, 0 0 0 21px #202020, 0 0 0 28px transparent;
   }
 }
-.job-animation-node.failed .animation-medium {
-  box-shadow: 0 0 0 8px #202020, 0 0 0 20px rgba(235, 0, 138, 0.7);
-}
 .job-animation-node.pending .animation-small {
   -webkit-animation: "small-pending-ripples-pop" 1s linear infinite;
   animation: "small-pending-ripples-pop" 1s linear infinite;
@@ -2473,9 +2460,6 @@ span.error {
   100% {
     box-shadow: 0 0 0 3px #202020, 0 0 0 6px #f8ca12, 0 0 0 9px #202020, 0 0 0 12px transparent;
   }
-}
-.job-animation-node.failed .animation-small {
-  box-shadow: 0 0 0 4px #202020, 0 0 0 10px rgba(235, 0, 138, 0.7);
 }
 .build-number {
   font-size: 2em;
@@ -2839,7 +2823,7 @@ span.error {
 .step-body {
   padding: 10px;
 }
-.build-step pre {
+.step-body pre {
   margin: 0;
 }
 .steps {
