--- a/web/public/main.yesterday-night.css
+++ b/web/public/main.yesterday-night.css
@@ -2198,8 +2198,7 @@ span.error {
 .job-animation-node .animation,
 .job-animation-node .animation,
 .legend dt.started,
-.legend dt.pending,
-.legend dt.failed {
+.legend dt.pending {
   border-radius: 1px;
 }
 .legend dt.started {
@@ -2254,9 +2253,6 @@ span.error {
     box-shadow: 0 0 0 2px #4f5b66, 0 0 0 4px #c0c5ce, 0 0 0 6px #4f5b66, 0 0 0 8px transparent;
   }
 }
-.legend dt.failed {
-  box-shadow: 0 0 0 2px #4f5b66, 0 0 0 5px rgba(204, 102, 102, 0.7);
-}
 .job-animation-node.pending .animation-xlarge {
   -webkit-animation: "xlarge-pending-ripples-yesterday-night" 1s linear infinite;
   animation: "xlarge-pending-ripples-yesterday-night" 1s linear infinite;
@@ -2308,9 +2304,6 @@ span.error {
   100% {
     box-shadow: 0 0 0 20px #4f5b66, 0 0 0 40px #f0c674, 0 0 0 60px #4f5b66, 0 0 0 80px transparent;
   }
-}
-.job-animation-node.failed .animation-xlarge {
-  box-shadow: 0 0 0 24px #4f5b66, 0 0 0 60px rgba(204, 102, 102, 0.7);
 }
 .job-animation-node.pending .animation-large {
   -webkit-animation: "large-pending-ripples-yesterday-night" 1s linear infinite;
@@ -2364,9 +2357,6 @@ span.error {
     box-shadow: 0 0 0 15px #4f5b66, 0 0 0 30px #f0c674, 0 0 0 45px #4f5b66, 0 0 0 60px transparent;
   }
 }
-.job-animation-node.failed .animation-large {
-  box-shadow: 0 0 0 18px #4f5b66, 0 0 0 45px rgba(204, 102, 102, 0.7);
-}
 .job-animation-node.pending .animation-medium {
   -webkit-animation: "medium-pending-ripples-yesterday-night" 1s linear infinite;
   animation: "medium-pending-ripples-yesterday-night" 1s linear infinite;
@@ -2419,9 +2409,6 @@ span.error {
     box-shadow: 0 0 0 7px #4f5b66, 0 0 0 14px #f0c674, 0 0 0 21px #4f5b66, 0 0 0 28px transparent;
   }
 }
-.job-animation-node.failed .animation-medium {
-  box-shadow: 0 0 0 8px #4f5b66, 0 0 0 20px rgba(204, 102, 102, 0.7);
-}
 .job-animation-node.pending .animation-small {
   -webkit-animation: "small-pending-ripples-yesterday-night" 1s linear infinite;
   animation: "small-pending-ripples-yesterday-night" 1s linear infinite;
@@ -2473,9 +2460,6 @@ span.error {
   100% {
     box-shadow: 0 0 0 3px #4f5b66, 0 0 0 6px #f0c674, 0 0 0 9px #4f5b66, 0 0 0 12px transparent;
   }
-}
-.job-animation-node.failed .animation-small {
-  box-shadow: 0 0 0 4px #4f5b66, 0 0 0 10px rgba(204, 102, 102, 0.7);
 }
 .build-number {
   font-size: 2em;
@@ -2839,7 +2823,7 @@ span.error {
 .step-body {
   padding: 10px;
 }
-.build-step pre {
+.step-body pre {
   margin: 0;
 }
 .steps {
