add triangles above failed jobs

--- a/web/assets/css/colors.less
+++ b/web/assets/css/colors.less
@@ -49,6 +49,18 @@
 .started { background: @base0A; }
 .paused { background: @base0D; }
 
+.fail-triangle {
+  stroke: @base01;
+  stroke-linecap: round;
+  stroke-linejoin: round;
+  fill: @base08;
+}
+
+.fail-triangle-outline {
+  fill: @base08;
+  opacity: 0.7;
+}
+
 span.error { color: @base08; }
 .resource-check-status pre { color: @base08; }
 
