--- a/web/public/main.3024.css
+++ b/web/public/main.3024.css
@@ -2165,6 +2165,16 @@ nav .groups li a {
 .paused {
   background: #01a0e4;
 }
+.fail-triangle {
+  stroke: #3a3432;
+  stroke-linecap: round;
+  stroke-linejoin: round;
+  fill: #db2d20;
+}
+.fail-triangle-outline {
+  fill: #db2d20;
+  opacity: 0.7;
+}
 span.error {
   color: #db2d20;
 }
