--- a/web/public/main.apathy.css
+++ b/web/public/main.apathy.css
@@ -2165,6 +2165,16 @@ nav .groups li a {
 .paused {
   background: #96883E;
 }
+.fail-triangle {
+  stroke: #0B342D;
+  stroke-linecap: round;
+  stroke-linejoin: round;
+  fill: #3E9688;
+}
+.fail-triangle-outline {
+  fill: #3E9688;
+  opacity: 0.7;
+}
 span.error {
   color: #3E9688;
 }
