--- a/web/public/main.ashes.css
+++ b/web/public/main.ashes.css
@@ -2165,6 +2165,16 @@ nav .groups li a {
 .paused {
   background: #AE95C7;
 }
+.fail-triangle {
+  stroke: #393F45;
+  stroke-linecap: round;
+  stroke-linejoin: round;
+  fill: #C7AE95;
+}
+.fail-triangle-outline {
+  fill: #C7AE95;
+  opacity: 0.7;
+}
 span.error {
   color: #C7AE95;
 }
