--- a/web/public/main.atelier-cave.css
+++ b/web/public/main.atelier-cave.css
@@ -2165,6 +2165,16 @@ nav .groups li a {
 .paused {
   background: #576ddb;
 }
+.fail-triangle {
+  stroke: #26232a;
+  stroke-linecap: round;
+  stroke-linejoin: round;
+  fill: #be4678;
+}
+.fail-triangle-outline {
+  fill: #be4678;
+  opacity: 0.7;
+}
 span.error {
   color: #be4678;
 }
