--- a/web/public/main.atelier-forest.css
+++ b/web/public/main.atelier-forest.css
@@ -2165,6 +2165,16 @@ nav .groups li a {
 .paused {
   background: #407ee7;
 }
+.fail-triangle {
+  stroke: #2c2421;
+  stroke-linecap: round;
+  stroke-linejoin: round;
+  fill: #f22c40;
+}
+.fail-triangle-outline {
+  fill: #f22c40;
+  opacity: 0.7;
+}
 span.error {
   color: #f22c40;
 }
