--- a/web/public/main.atelier-plateau.css
+++ b/web/public/main.atelier-plateau.css
@@ -2165,6 +2165,16 @@ nav .groups li a {
 .paused {
   background: #7272ca;
 }
+.fail-triangle {
+  stroke: #292424;
+  stroke-linecap: round;
+  stroke-linejoin: round;
+  fill: #ca4949;
+}
+.fail-triangle-outline {
+  fill: #ca4949;
+  opacity: 0.7;
+}
 span.error {
   color: #ca4949;
 }
