--- a/web/public/main.atelier-savanna.css
+++ b/web/public/main.atelier-savanna.css
@@ -2165,6 +2165,16 @@ nav .groups li a {
 .paused {
   background: #478c90;
 }
+.fail-triangle {
+  stroke: #232a25;
+  stroke-linecap: round;
+  stroke-linejoin: round;
+  fill: #b16139;
+}
+.fail-triangle-outline {
+  fill: #b16139;
+  opacity: 0.7;
+}
 span.error {
   color: #b16139;
 }
