--- a/web/public/main.bespin.css
+++ b/web/public/main.bespin.css
@@ -2165,6 +2165,16 @@ nav .groups li a {
 .paused {
   background: #5ea6ea;
 }
+.fail-triangle {
+  stroke: #36312e;
+  stroke-linecap: round;
+  stroke-linejoin: round;
+  fill: #cf6a4c;
+}
+.fail-triangle-outline {
+  fill: #cf6a4c;
+  opacity: 0.7;
+}
 span.error {
   color: #cf6a4c;
 }
