--- a/web/public/main.chalk.css
+++ b/web/public/main.chalk.css
@@ -2165,6 +2165,16 @@ nav .groups li a {
 .paused {
   background: #6fc2ef;
 }
+.fail-triangle {
+  stroke: #202020;
+  stroke-linecap: round;
+  stroke-linejoin: round;
+  fill: #fb9fb1;
+}
+.fail-triangle-outline {
+  fill: #fb9fb1;
+  opacity: 0.7;
+}
 span.error {
   color: #fb9fb1;
 }
