--- a/web/public/main.codeschool.css
+++ b/web/public/main.codeschool.css
@@ -2165,6 +2165,16 @@ nav .groups li a {
 .paused {
   background: #484d79;
 }
+.fail-triangle {
+  stroke: #1c3657;
+  stroke-linecap: round;
+  stroke-linejoin: round;
+  fill: #2a5491;
+}
+.fail-triangle-outline {
+  fill: #2a5491;
+  opacity: 0.7;
+}
 span.error {
   color: #2a5491;
 }
