--- a/web/public/main.darktooth.css
+++ b/web/public/main.darktooth.css
@@ -2165,6 +2165,16 @@ nav .groups li a {
 .paused {
   background: #0D6678;
 }
+.fail-triangle {
+  stroke: #32302F;
+  stroke-linecap: round;
+  stroke-linejoin: round;
+  fill: #FB543F;
+}
+.fail-triangle-outline {
+  fill: #FB543F;
+  opacity: 0.7;
+}
 span.error {
   color: #FB543F;
 }
