--- a/web/public/main.default.css
+++ b/web/public/main.default.css
@@ -2165,6 +2165,16 @@ nav .groups li a {
 .paused {
   background: #7cafc2;
 }
+.fail-triangle {
+  stroke: #282828;
+  stroke-linecap: round;
+  stroke-linejoin: round;
+  fill: #ab4642;
+}
+.fail-triangle-outline {
+  fill: #ab4642;
+  opacity: 0.7;
+}
 span.error {
   color: #ab4642;
 }
