--- a/web/public/main.embers.css
+++ b/web/public/main.embers.css
@@ -2165,6 +2165,16 @@ nav .groups li a {
 .paused {
   background: #6D5782;
 }
+.fail-triangle {
+  stroke: #2C2620;
+  stroke-linecap: round;
+  stroke-linejoin: round;
+  fill: #826D57;
+}
+.fail-triangle-outline {
+  fill: #826D57;
+  opacity: 0.7;
+}
 span.error {
   color: #826D57;
 }
