--- a/web/public/main.greenscreen.css
+++ b/web/public/main.greenscreen.css
@@ -2165,6 +2165,16 @@ nav .groups li a {
 .paused {
   background: #009900;
 }
+.fail-triangle {
+  stroke: #003300;
+  stroke-linecap: round;
+  stroke-linejoin: round;
+  fill: #007700;
+}
+.fail-triangle-outline {
+  fill: #007700;
+  opacity: 0.7;
+}
 span.error {
   color: #007700;
 }
