--- a/web/public/main.isotope.css
+++ b/web/public/main.isotope.css
@@ -2165,6 +2165,16 @@ nav .groups li a {
 .paused {
   background: #0066ff;
 }
+.fail-triangle {
+  stroke: #404040;
+  stroke-linecap: round;
+  stroke-linejoin: round;
+  fill: #ff0000;
+}
+.fail-triangle-outline {
+  fill: #ff0000;
+  opacity: 0.7;
+}
 span.error {
   color: #ff0000;
 }
