--- a/web/public/main.mocha.css
+++ b/web/public/main.mocha.css
@@ -2165,6 +2165,16 @@ nav .groups li a {
 .paused {
   background: #8ab3b5;
 }
+.fail-triangle {
+  stroke: #534636;
+  stroke-linecap: round;
+  stroke-linejoin: round;
+  fill: #cb6077;
+}
+.fail-triangle-outline {
+  fill: #cb6077;
+  opacity: 0.7;
+}
 span.error {
   color: #cb6077;
 }
