--- a/web/public/main.monokai.css
+++ b/web/public/main.monokai.css
@@ -2165,6 +2165,16 @@ nav .groups li a {
 .paused {
   background: #66d9ef;
 }
+.fail-triangle {
+  stroke: #383830;
+  stroke-linecap: round;
+  stroke-linejoin: round;
+  fill: #f92672;
+}
+.fail-triangle-outline {
+  fill: #f92672;
+  opacity: 0.7;
+}
 span.error {
   color: #f92672;
 }
