--- a/web/public/main.seti.css
+++ b/web/public/main.seti.css
@@ -2165,6 +2165,16 @@ nav .groups li a {
 .paused {
   background: #55b5db;
 }
+.fail-triangle {
+  stroke: #8ec43d;
+  stroke-linecap: round;
+  stroke-linejoin: round;
+  fill: #Cd3f45;
+}
+.fail-triangle-outline {
+  fill: #Cd3f45;
+  opacity: 0.7;
+}
 span.error {
   color: #Cd3f45;
 }
