--- a/web/public/main.summerfruit.css
+++ b/web/public/main.summerfruit.css
@@ -2165,6 +2165,16 @@ nav .groups li a {
 .paused {
   background: #3777E6;
 }
+.fail-triangle {
+  stroke: #202020;
+  stroke-linecap: round;
+  stroke-linejoin: round;
+  fill: #FF0086;
+}
+.fail-triangle-outline {
+  fill: #FF0086;
+  opacity: 0.7;
+}
 span.error {
   color: #FF0086;
 }
