--- a/web/public/main.tomorrow.css
+++ b/web/public/main.tomorrow.css
@@ -2165,6 +2165,16 @@ nav .groups li a {
 .paused {
   background: #81a2be;
 }
+.fail-triangle {
+  stroke: #282a2e;
+  stroke-linecap: round;
+  stroke-linejoin: round;
+  fill: #cc6666;
+}
+.fail-triangle-outline {
+  fill: #cc6666;
+  opacity: 0.7;
+}
 span.error {
   color: #cc6666;
 }
