add custom concourse theme based off of flat
[#113039669]

--- a/web/templates/layouts/with_pipeline.html
+++ b/web/templates/layouts/with_pipeline.html
@@ -23,6 +23,7 @@
     <link href="{{asset "main.chalk.css"}}" media="all" rel="alternate stylesheet" type="text/css" title="chalk" />
     <link href="{{asset "main.codeschool.css"}}" media="all" rel="alternate stylesheet" type="text/css" title="codeschool" />
     <link href="{{asset "main.colors.css"}}" media="all" rel="alternate stylesheet" type="text/css" title="colors" />
+    <link href="{{asset "main.concourse.css"}}" media="all" rel="alternate stylesheet" type="text/css" title="concourse" />
     <link href="{{asset "main.darktooth.css"}}" media="all" rel="alternate stylesheet" type="text/css" title="darktooth" />
     <link href="{{asset "main.default.css"}}" media="all" rel="alternate stylesheet" type="text/css" title="default" />
     <link href="{{asset "main.eighties.css"}}" media="all" rel="alternate stylesheet" type="text/css" title="eighties" />
@@ -120,6 +121,7 @@
       <option value="chalk">chalk</option>
       <option value="codeschool">codeschool</option>
       <option value="colors">colors</option>
+      <option value="concourse">concourse</option>
       <option value="darktooth">darktooth</option>
       <option value="default">default</option>
       <option value="eighties">eighties</option>
