--- a/web/assets/css/_vars.less
+++ b/web/assets/css/_vars.less
@@ -1,7 +1,7 @@
-@base00: #2C3E50;
-@base01: #34495E;
-@base02: #5E6D7D;
-@base03: #85929D;
+@base00: #1A252F;
+@base01: #273747;
+@base02: #34495E;
+@base03: #5D6D7E;
 @base04: #BDC3C7;
 @base05: #E6E7E8;
 @base06: #f5f5f5;
@@ -13,5 +13,5 @@
 @base0C: #1ABC9C;
 @base0D: #3498DB;
 @base0E: #9B59B6;
-@base0F: #be643c;
-@theme: "flat";
+@base0F: #8F4B2D;
+@theme: "concourse";
