make input edges dashed if trigger=false
Signed-off-by: Liz Dahlstrom <edahlstrom@pivotal.io>

--- a/web/assets/css/svg.less
+++ b/web/assets/css/svg.less
@@ -19,4 +19,5 @@ svg {
   .edge.errored { stroke: @base09; }
   .edge.aborted { stroke: @base0F; }
   .edge.paused { stroke: @base0D; }
+  .edge.trigger-false { stroke-dasharray: 5,5; }
 }
